Tests/Conformance/Generated/Term/Constr/Constr_09.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Term.Constr.Constr_09

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc term_constr_constr_09 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/term/constr/constr-09/constr-09.uplc"

end Tests.Conformance.Generated.Term.Constr.Constr_09
